--- a/index.html
+++ b/index.html
@@ -9,11 +9,40 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <main>
         <h1>Guess the number</h1>
+        <div class="rules">
+            <p>Number must be from 0 - 20</p>
+            <p>Number will be an integer (whole number)</p>
+            <p>Have fun and good luck!</p>
+        </div>
+        <div class="correct-box">
+            <p class="correct-nunber">
+                ?
+            </p>
+        </div>
+        <input type="number" class="guess">
+        <div class="btn-holder">
+            <button class="check btn" onClick="checkNumber()">Check</button>
+            <button class="retry btn" onClick="refreshPage()">Retry</button>
+        </div>
+        <div class="score-holder">
+            <div class="score">
+                <p>
+                    Score: <span>0</span>
+                </p>
+            </div>
+            <div class="highscore">
+                <p>Highscore: <span>0</span></p>
+            </div>
+
+        </div>
     </main>
 
     <script src="" async defer></script>
